--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "@prisma/client": "^6.15.0",
     "bullmq": "^5.58.5",
     "cors": "^2.8.5",
+    "eslint": "^9.35.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "ioredis": "^5.7.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.15.0",
     "stripe": "^18.5.0"
   },
